tests/spec/non_conformant/errors/fn_warn/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/fn-warn"

mod property;

mod ruleset;

mod simple;
